@@ -1,5 +1,16 @@
 2008-06-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
 
+	Supported FTP server which don't recognize SIZE raw command.
+	If SIZE raw command is failed, aria2 will try to get file size
+	from the response of RETR raw command. If both attempts are failed,
+	then resuming and segmented downloading are disabled.
+	* src/FtpConnection.cc
+	* src/FtpConnection.h
+	* src/FtpNegotiationCommand.cc
+	* src/FtpNegotiationCommand.h
+
+2008-06-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
+
 	* Release 0.14.0+1
 
 2008-06-24  Tatsuhiro Tsujikawa  <tujikawa at rednoah dot com>
